--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
 /*  your css code here. If applicable */
+.hero{
+	display:flex;
+	justify-content : space-around;
+	align-items :left;
+}
+
+img{
+	width:300px;
+	height:300px;
+	object-fit: cover;
+}
+
+button{
+	padding : 10px;
+	background-color:red; 
+	color:white; 
+	border-radius:10px;
+}
+
+.hero div{
+	margin:20px;
+}
